Fix overflow

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -165,7 +165,7 @@ footer.main-footer {
 				line-height: 1.44;
 			}
 			.socials {
-				margin: 24px -16px;
+				margin: 24px -15px;
 				display: flex;
 				justify-content: flex-start;
 				@media (max-width: 900px) {
